add layout edit and delete

--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/_10sdp"
         android:text="Light Theme"
+        android:fontFamily="@font/lato"
         android:textSize="@dimen/_24sdp"
         android:textOff="Light Theme"
         android:textOn="Dark Theme"
