--- a/app/src/main/res/layout/item_shop.xml
+++ b/app/src/main/res/layout/item_shop.xml
@@ -6,69 +6,86 @@
 
         <variable
             name="shopData"
-            type="com.example.konsinyasiapp.database.ShopData" />
+            type="com.example.konsinyasiapp.data.ShopData" />
     </data>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:layout_marginRight="@dimen/_8sdp"
-        android:background="@drawable/item_background"
-        android:orientation="vertical">
+        android:layout_margin="10dp"
+        android:background="@color/white"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="8dp"
+        app:cardMaxElevation="5dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:padding="4dp">
 
                 <TextView
                     android:id="@+id/tv_item_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:layout_margin="@dimen/_6sdp"
                     android:fontFamily="@font/lato"
-                    android:textColor="@color/black"
-                    android:gravity="start"
+                    android:maxLength="30"
                     android:text="@{shopData.name}"
+                    android:textColor="@color/black"
                     android:textSize="18sp" />
-
 
                 <TextView
                     android:id="@+id/tv_item_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:layout_margin="@dimen/_6sdp"
                     android:fontFamily="@font/lato"
-                    android:gravity="start"
-                    android:textColor="@color/black"
+                    android:maxLength="300"
+                    android:maxLines="20"
                     android:text="@{shopData.address}"
+                    android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_item_product_owner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:layout_margin="@dimen/_6sdp"
                     android:fontFamily="@font/lato"
-                    android:gravity="start"
-                    android:textColor="@color/black"
                     android:text="@{shopData.ownerName}"
+                    android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_item_phone_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:layout_margin="@dimen/_6sdp"
                     android:fontFamily="@font/lato"
-                    android:textColor="@color/black"
-                    android:gravity="start"
                     android:text="@{shopData.phoneNumber}"
+                    android:textColor="@color/black"
                     android:textSize="18sp" />
 
             </LinearLayout>
-    </LinearLayout>
+
+            <ImageView
+                android:id="@+id/mMenus"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/_8sdp"
+                android:src="@drawable/ic_more" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
 </layout>
