--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,9 +10,8 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/add"
+        android:id="@+id/menu_delete_all"
+        android:title="Delete all"
         app:showAsAction="never" />
 
 </menu>
