--- a/app/src/main/res/menu/shop_fragment_menu.xml
+++ b/app/src/main/res/menu/shop_fragment_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <item
+        android:id="@+id/menu_delete_all"
+        android:title="Delete all"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/menu_search"
         android:icon="@drawable/ic_search"
@@ -9,5 +15,17 @@
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/edit_text"
+        android:icon="@drawable/ic_edit"
+        android:title="Edit Text"
+        />
+
+    <item
+        android:id="@+id/delete"
+        android:icon="@drawable/ic_delete"
+        android:title="Delete"
+        />
 
 </menu>
