--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -14,4 +14,12 @@
         android:title="Delete all"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/menu_search"
+        android:icon="@drawable/ic_search"
+        android:iconTint="@color/white"
+        android:title="@string/search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="ifRoom" />
+
 </menu>
