--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,7 +7,8 @@
         android:icon="@drawable/ic_settings"
         android:iconTint="@color/white"
         android:title="Setting"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:orderInCategory="2"/>
 
     <item
         android:id="@+id/menu_delete_all"
