--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -114,6 +114,9 @@
             app:destination="@id/nav_shop"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_right" />
+        <argument
+            android:name="currentItem"
+            app:argType="com.example.konsinyasiapp.ui.shop.database.entities.ShopData" />
     </fragment>
 
 </navigation>
