add relasi tabel with foreignKeys

--- a/app/src/main/res/layout/fragment_add_category.xml
+++ b/app/src/main/res/layout/fragment_add_category.xml
@@ -18,7 +18,9 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="@dimen/_16sdp"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp">
 
         <EditText
             android:id="@+id/edt_nama_produk"
