--- a/app/src/main/res/layout/activity_form_user_preference.xml
+++ b/app/src/main/res/layout/activity_form_user_preference.xml
@@ -49,29 +49,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_55sdp"
                 android:background="@drawable/item_background"
-                android:hint="@string/name"
+                android:hint="Nama"
                 android:inputType="textPersonName"
                 android:maxLines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            app:boxStrokeWidth="0dp"
-            app:boxStrokeWidthFocused="0dp">
-
-            <EditText
-                android:id="@+id/edt_alamat"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_55sdp"
-                android:background="@drawable/item_background"
-                android:hint="Alamat"
-                android:inputType="textPersonName"
-                android:maxLines="1" />
-
-        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btn_save"
