--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -7,21 +7,29 @@
         type="com.example.konsinyasiapp.ui.categoryProduct.database.entities.CategoryData"/>
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_margin="8dp">
 
-        <EditText
+        <TextView
             android:id="@+id/et_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_background"
+            android:textAlignment="center"
             android:fontFamily="@font/lato"
             android:padding="16dp"
-            android:text="Contoh EditText"
-            android:textColor="@color/white"
+            android:background="@drawable/item_background"
+            android:text="@{categoryData.nameCategory}"
+            android:textColor="@color/black"
             android:textSize="18sp" />
 
-    </RelativeLayout>
+        <ImageButton
+            android:id="@+id/deleteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_delete"/>
+
+    </LinearLayout>
 </layout>
