--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -20,7 +20,11 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_100sdp"/>
+            android:layout_height="@dimen/_100sdp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_no_data"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
