--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -37,7 +37,21 @@
         android:id="@+id/nav_deposit"
         android:name="com.example.konsinyasiapp.ui.deposit.DepositFragment"
         android:label="@string/deposit"
-        tools:layout="@layout/fragment_deposit" />
+        tools:layout="@layout/fragment_deposit" >
+        <action
+            android:id="@+id/action_nav_deposit_to_action_navDeposit_add"
+            app:destination="@id/action_navDeposit_add" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/action_navDeposit_add"
+        android:name="com.example.konsinyasiapp.ui.deposit.AddDepositFragment"
+        android:label="Tambah Deposit"
+        tools:layout="@layout/fragment_add_deposit">
+        <action
+            android:id="@+id/action_action_navDeposit_add_to_nav_deposit"
+            app:destination="@id/nav_deposit" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_myProduct"
@@ -118,5 +132,6 @@
             android:name="currentItem"
             app:argType="com.example.konsinyasiapp.entities.ShopData" />
     </fragment>
+
 
 </navigation>
