menambahkan id dari toko kedalam deposit,menambahkan alertDialog untuk update data dibagian productFragment(bug),refactoring code

--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -43,7 +43,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:fontFamily="@font/lato"
-            android:hint="Pilih Category"
+            android:hint="Pilih Kategori"
             android:inputType="none" />
 
     </com.google.android.material.textfield.TextInputLayout>
