--- a/app/src/main/res/layout/fragment_add_product_in_deposit.xml
+++ b/app/src/main/res/layout/fragment_add_product_in_deposit.xml
@@ -1,52 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/linearLayout"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingStart="@dimen/_16sdp"
     android:paddingTop="@dimen/_16sdp"
     android:paddingEnd="@dimen/_16sdp"
     android:paddingBottom="@dimen/_16sdp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp">
-
-        <EditText
-            android:id="@+id/edt_nama_produk_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/item_background"
-            android:hint="Nama Produk"
-            android:inputType="text"
-            android:maxLines="1" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+    tools:context=".ui.deposit.AddProductInDepositFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        android:hint="Pilih Produk"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp">
 
         <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextViewCategory_edit"
+            android:id="@+id/autoCompleteTextViewProduct"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Pilih Category"
             android:layout_weight="1"
+            android:background="@drawable/item_background"
+            android:fontFamily="@font/lato"
             android:inputType="none" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -55,15 +39,18 @@
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp">
 
-        <EditText
-            android:id="@+id/edt_harga_produk_edit"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etJumlahBarang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/item_background"
-            android:hint="Harga Produk"
-            android:inputType="numberDecimal"
-            android:maxLines="1" />
+            android:fontFamily="@font/lato"
+            android:hint="Jumlah Barang"
+            android:inputType="number" />
+
     </com.google.android.material.textfield.TextInputLayout>
+
+
 
 
 </LinearLayout>
