--- a/app/src/main/res/menu/shop_fragment_menu_more.xml
+++ b/app/src/main/res/menu/shop_fragment_menu_more.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/edit_text"
         android:icon="@drawable/ic_edit"
-        android:title="Edit Text"
-        />
+        android:title="Edit Text" />
 
     <item
         android:id="@+id/delete"
         android:icon="@drawable/ic_delete"
-        android:title="Delete"
-        />
+        android:title="Delete" />
 
 </menu>
