--- a/app/src/main/res/layout/fragment_add_deposit.xml
+++ b/app/src/main/res/layout/fragment_add_deposit.xml
@@ -1,63 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingStart="@dimen/_16sdp"
+    android:paddingTop="@dimen/_16sdp"
+    android:paddingEnd="@dimen/_16sdp"
+    android:paddingBottom="@dimen/_16sdp"
+    tools:context=".ui.deposit.AddDepositFragment">
 
-    <data>
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:hint="Pilih Toko">
 
-    </data>
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextViewShop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/lato"
+            android:inputType="none" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tv_date_picker_deposit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/item_background"
+        android:fontFamily="@font/lato"
+        android:hint="Tentukan Tanggal Deposit"
+        android:padding="@dimen/_13sdp"
+        android:textSize="@dimen/_15ssp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/_16sdp"
-        android:paddingTop="@dimen/_16sdp"
-        android:paddingEnd="@dimen/_16sdp"
-        android:paddingBottom="@dimen/_16sdp"
-        tools:context=".ui.deposit.AddDepositFragment">
+        android:layout_marginTop="16dp"
+        android:gravity="end">
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btn_lanjut"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:hint="Pilih Toko">
-
-            <AutoCompleteTextView
-                android:id="@+id/autoCompleteTextViewShop"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:fontFamily="@font/lato"
-                android:inputType="none" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/tv_date_picker_deposit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/item_background"
-            android:fontFamily="@font/lato"
-            android:hint="Masukkan Tanggal Deposit"
-            android:padding="@dimen/_13sdp"
-            android:textSize="@dimen/_15ssp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="end">
-
-            <Button
-                android:id="@+id/btn_lanjut"
-                android:NavigateToAddProductInDeposit="@{true}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Lanjut" />
-
-        </LinearLayout>
-
+            android:text="Lanjut" />
 
     </LinearLayout>
-</layout>
+
+
+</LinearLayout>
