--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -18,6 +18,26 @@
             android:layout_height="match_parent"
             tools:listitem="@layout/item_category" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/no_data_imageView"
+            android:layout_width="@dimen/_120sdp"
+            android:layout_height="@dimen/_120sdp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_no_data"
+            android:visibility="gone"
+            tools:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/no_data_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/no_data_imageView"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:text="Tidak Ada Kategori"
+            android:textSize="@dimen/_16ssp"
+            android:visibility="invisible" />
+
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/fab_add_categoriProduct"
             android:layout_width="wrap_content"
