--- a/app/src/main/res/layout/activity_form_user_preference.xml
+++ b/app/src/main/res/layout/activity_form_user_preference.xml
@@ -62,7 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
             android:background="@drawable/item_background"
-            android:text="Continue" />
+            android:text="Simpan" />
 
     </LinearLayout>
 
