--- a/app/src/main/res/layout/fragment_add_product_in_deposit.xml
+++ b/app/src/main/res/layout/fragment_add_product_in_deposit.xml
@@ -7,13 +7,9 @@
 
     </data>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingStart="@dimen/_16sdp"
             android:paddingTop="@dimen/_16sdp"
@@ -96,5 +92,5 @@
 
         </LinearLayout>
 
-    </ScrollView>
+
 </layout>
