--- a/app/src/main/res/layout/item_deposit.xml
+++ b/app/src/main/res/layout/item_deposit.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/_16sdp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="depositWithShop"
+            type="com.example.konsinyasiapp.entities.DepositWithShop" />
+    </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="@dimen/_4sdp"
-        android:radius="@dimen/_10sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_9sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_9sdp"
+        app:cardBackgroundColor="#344955"
+        app:cardCornerRadius="@dimen/_10sdp"
+        app:cardElevation="@dimen/_8sdp"
+        app:cardMaxElevation="@dimen/_5sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/custom_card_background"
             android:orientation="vertical"
             android:padding="@dimen/_16sdp">
 
@@ -26,33 +31,50 @@
                 android:id="@+id/tvNamaToko"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:fontFamily="@font/lato_bold"
                 android:gravity="center"
-                android:text="Nama Toko"
-                android:textSize="@dimen/_20ssp" />
+                android:text="@{depositWithShop.shopData.name}"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_17ssp"
+                app:drawableTopCompat="@drawable/ic_store" />
 
-            <TextView
-                android:id="@+id/tvTanggalStart"
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_1sdp"
+                android:layout_marginTop="@dimen/_4sdp"
+                android:background="@color/white" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:fontFamily="@font/lato"
                 android:gravity="center"
-                android:text="Start: 01 Juli 2023"
-                android:textSize="@dimen/_16ssp" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvTanggalFinish"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:fontFamily="@font/lato"
-                android:gravity="center"
-                android:text="Finish: 15 Juli 2023"
-                android:textSize="@dimen/_16ssp" />
+                <TextView
+                    android:id="@+id/tvTanggalStart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:drawableEnd="@drawable/ic_calender"
+                    android:fontFamily="@font/lato"
+                    android:text="@{depositWithShop.depositData.depositDate}"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15ssp" />
+
+                <TextView
+                    android:id="@+id/tvTanggalFinish"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:fontFamily="@font/lato"
+                    android:text="@{depositWithShop.depositData.depositFinish.isEmpty() ? `Belum Finish Deposit` : ``}"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15ssp" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
