--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -13,11 +13,14 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_9sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_9sdp"
         app:cardBackgroundColor="#344955"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="8dp"
-        app:cardMaxElevation="5dp">
+        app:cardCornerRadius="@dimen/_10sdp"
+        app:cardElevation="@dimen/_8sdp"
+        app:cardMaxElevation="@dimen/_5sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,10 +30,10 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_margin="@dimen/_15sdp"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:padding="4dp">
+                android:padding="@dimen/_4sdp">
 
                 <TextView
                     android:id="@+id/tv_nama_product"
@@ -39,28 +42,28 @@
                     android:fontFamily="@font/lato"
                     android:text="@{productWithCategory.productData.namaProduct}"
                     android:textColor="@color/white"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/_16ssp" />
 
                 <TextView
                     android:id="@+id/tv_pilihan_product"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="@dimen/_8sdp"
                     android:fontFamily="@font/lato"
                     android:text="@{productWithCategory.categoryData.nameCategory}"
                     android:textColor="@color/white"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/_16ssp" />
 
                 <TextView
                     android:id="@+id/tv_harga_product"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="@dimen/_8sdp"
                     android:fontFamily="@font/lato"
                     android:text="@{productWithCategory.productData.hargaProduct}"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textColor="@color/white"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/_16ssp" />
 
             </LinearLayout>
 
