--- a/app/src/main/res/layout/item_product_in_deposit.xml
+++ b/app/src/main/res/layout/item_product_in_deposit.xml
@@ -1,38 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/_8sdp"
-    android:background="@drawable/item_product_in_deposit"
-    android:elevation="@dimen/_4sdp"
-    android:padding="@dimen/_16sdp"
-    android:radius="@dimen/_8sdp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <data>
+
+        <variable
+            name="depositWithProduct"
+            type="com.example.konsinyasiapp.entities.DepositWithProduct" />
+    </data>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tvProductName"
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:fontFamily="@font/lato"
-            android:text="Nama Produk"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_16ssp" />
+            android:layout_margin="@dimen/_8sdp"
+            android:background="@drawable/item_background"
+            android:elevation="@dimen/_4sdp"
+            android:padding="@dimen/_16sdp"
+            android:radius="@dimen/_8sdp">
 
-        <TextView
-            android:id="@+id/tvProductQuantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato"
-            android:text="Jumlah Produk"
-            android:textColor="@color/reply_blue"
-            android:textSize="@dimen/_16ssp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvProductName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:fontFamily="@font/lato"
+                    android:text="@{depositWithProduct.productData.namaProduct}"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_16ssp" />
+
+                <TextView
+                    android:id="@+id/tvProductQuantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato"
+                    android:text="@{depositWithProduct.productInDeposit.jumlahQuantity}"
+                    android:textColor="@color/reply_blue"
+                    android:textSize="@dimen/_16ssp" />
 
 
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </ScrollView>
+</layout>
