--- a/app/src/main/res/layout/item_shop.xml
+++ b/app/src/main/res/layout/item_shop.xml
@@ -12,11 +12,14 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_9sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_9sdp"
         app:cardBackgroundColor="#344955"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="8dp"
-        app:cardMaxElevation="5dp">
+        app:cardCornerRadius="@dimen/_10sdp"
+        app:cardElevation="@dimen/_8sdp"
+        app:cardMaxElevation="@dimen/_5sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,10 +29,10 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_margin="@dimen/_10sdp"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:padding="4dp">
+                android:padding="@dimen/_4sdp">
 
                 <TextView
                     android:id="@+id/tv_item_name"
@@ -39,7 +42,7 @@
                     android:fontFamily="@font/lato"
                     android:text="@{shopData.name}"
                     android:textColor="@color/white"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/_15ssp" />
 
                 <TextView
                     android:id="@+id/tv_item_address"
@@ -47,11 +50,9 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/_6sdp"
                     android:fontFamily="@font/lato"
-                    android:maxLength="300"
-                    android:maxLines="20"
                     android:text="@{shopData.address}"
                     android:textColor="@color/white"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/_15ssp" />
 
                 <TextView
                     android:id="@+id/tv_item_product_owner"
@@ -61,7 +62,7 @@
                     android:fontFamily="@font/lato"
                     android:text="@{shopData.ownerName}"
                     android:textColor="@color/white"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/_15ssp" />
 
                 <TextView
                     android:id="@+id/tv_item_phone_number"
@@ -71,7 +72,7 @@
                     android:fontFamily="@font/lato"
                     android:text="@{shopData.phoneNumber}"
                     android:textColor="@color/white"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/_15ssp" />
 
             </LinearLayout>
 
